# calcul_salaire

./: .gitignore  README.md  app.py  calcule_salaire.py  pyproject.toml
